the page layout has been changed to match the design

--- a/leningrad/components/attraction-info/heart-button-style.css
+++ b/leningrad/components/attraction-info/heart-button-style.css
@@ -1,19 +1,20 @@
-.heart-button{
+.heart-button {
     cursor: pointer;
     background: transparent;
     border: 0.1vw solid #0B83D9;
     border-radius: 0.9vw;
-    width: 15.9vw;
+    width: 30.3vw;
     height: 7.8vw;
     display: flex;
-    justify-content: left;
+    text-align: center;
+    justify-content: center;
     align-items: center;
     font-weight: 400;
-    font-size: 1.3vw;
+    font-size: 2vw;
     line-height: 1.6vw;
 }
 
-.heart-button-image{
+.heart-button-image {
     margin-left: 1.6vw;
     margin-right: 1.1vw;
     width: 3.5vw;
