--- a/leningrad/components/attraction-info/to-go-button-style.css
+++ b/leningrad/components/attraction-info/to-go-button-style.css
@@ -3,18 +3,19 @@
     background: transparent;
     border: 0.1vw solid #0B83D9;
     border-radius: 0.9vw;
-    width: 15.9vw;
+    width: 30.3vw;
     height: 7.8vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    align-items: center;
     font-weight: 400;
-    font-size: 1.3vw;
+    font-size: 2vw;
     line-height: 1.6vw;
 }
 
 .to-go-button-image{
-    margin-left: 1.8vw;
+    margin-left: 0.8vw;
     margin-right: 0.6vw;
     width: 4.6vw;
     height: 4.7vw;
