--- a/leningrad/app/attraction-info/page-style.css
+++ b/leningrad/app/attraction-info/page-style.css
@@ -3,13 +3,20 @@
 .attraction-title {
     margin-top: 40px;
     margin-bottom: 40px;
-    font-size: 3vw;
-    font-weight: 400;
-    line-height: 3.1vw;
+    font-size: 4.6vw;
+    font-weight: 500;
+    line-height: 5vw;
     margin-left: 15.7%;
     margin-right: 18.7%;
     text-align: center;
     white-space: pre-wrap;
+
+    @media (max-width: 450px) {
+        margin-top: 60px;
+        font-size: 22px;
+
+        line-height: 1.3;
+    }
 }
 
 .white {
@@ -18,16 +25,80 @@
     padding: 5.5% 8.4% 7.8%;
 }
 
+.routes-1ine {
+    align-items: center;
+    text-align: center;
+    margin-left: -6px;
+    width: 80%;
+    border: 0;
+    border-top: 2px solid black;
+    margin: 0;
+}
+
+.route-divider {
+    align-items: center;
+    text-align: center;
+    margin-left: 100px;
+    width: 80%;
+    border: 0;
+    border-top: 1px solid grey;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.r0ute-item {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 50vw;
+    gap: 17px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.r0ute-image {
+    margin-top: 20px;
+    margin-left: 45px;
+    align-items: center;
+    text-align: center;
+    width: 160px;
+    height: auto;
+    object-fit: cover;
+    /* Изображение не будет искажаться */
+    border-radius: 8px;
+}
+
+.r0ute-name {
+    margin-top: 15px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
 .preview-text {
     padding-top: 5%;
     padding-bottom: 5%;
-    text-align: center;
+    text-align: justify;
     white-space: pre-wrap;
-    font-size: 1.7vw;
+    font-size: 2vw;
     line-height: 2.1vw;
-    font-weight: 500;
     margin: 0;
     width: 100%;
+
+    @media (max-width: 450px) {
+        width: 94%;
+    }
 }
 
 .page-style {
@@ -39,11 +110,36 @@
     width: 100%;
     padding: 5.5% 8.4% 7.8%;
     font-family: Geologica, sans-serif;
+}
 
-    @media (max-width: 768px) {
-        padding-top: 5%;
-        padding-bottom: 6.4%;
-    }
+.media-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
+}
+
+.arrows {
+    padding-left: 4vw;
+    margin-top: 15px;
+    width: 11vw;
+    height: auto;
+}
+
+.arrows:hover {
+    transform: scale(1.1);
+}
+
+.carousel-item {
+    transition: all 0.3s ease;
+}
+
+.carousel-media {
+    width: 30vw;
+    height: 30vh;
+    transition: all 0.3s ease;
 }
 
 
@@ -53,17 +149,76 @@
     margin-left: 5vw;
     margin-top: 50px;
     margin-bottom: 1.8vw;
-    display: block;
-    object-fit: cover;
-    width: 56.25vw;
-    height: 489px;
+    width: 50vw;
+    height: 60vh;
+}
 
-    @media (max-width: 768px) {
-        margin-left: 1.3vw;
-        margin-right: 1.3vw;
-        margin-bottom: 2.6vw;
-        max-width: 97%;
+
+
+@media (max-width: 450px) {
+    .main-image {
+        margin-top: 10px;
+        width: 90%;
+        height: 200px;
+        border-radius: 10px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        z-index: 9;
+        margin-bottom: 20px;
     }
+}
+
+.swiper-container {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.swiper-slide {
+    margin-left: -2px;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-pagination {
+    position: relative;
+    bottom: 0px !important;
+    transform: translateY(50%);
+    z-index: 10;
+}
+
+.swiper-pagination-bullet {
+    background: #888 !important;
+    opacity: 0.5;
+    width: 10px;
+    height: 10px;
+    transition: background 0.3s ease;
+}
+
+.swiper-pagination-bullet-active {
+    background: black !important;
+    opacity: 1;
+    width: 12px;
+    height: 12px;
+}
+
+.image-carousel {
+    width: 15vw;
+    height: 18vh;
+    border-radius: 15px;
+    margin-top: 50px;
+}
+
+.pip {
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
 }
 
 .loading-or-error {
