--- a/leningrad/components/attraction-info/heart-button-style.css
+++ b/leningrad/components/attraction-info/heart-button-style.css
@@ -3,7 +3,7 @@
     background: transparent;
     border: 0.1vw solid #0B83D9;
     border-radius: 0.9vw;
-    width: 30.3vw;
+    width: 40vw;
     height: 7.8vw;
     display: flex;
     text-align: center;
@@ -12,6 +12,9 @@
     font-weight: 400;
     font-size: 2vw;
     line-height: 1.6vw;
+    @media (max-width: 450px) {
+        width: 36vw;
+    }
 }
 
 .heart-button-image {
@@ -19,4 +22,9 @@
     margin-right: 1.1vw;
     width: 3.5vw;
     height: 3.6vw;
+}
+
+.heart-button-image.pup:hover {
+    transform: scale(1.1);
+    fill: #0B83D9;
 }
