--- a/leningrad/components/attraction-info/images-slider-style.css
+++ b/leningrad/components/attraction-info/images-slider-style.css
@@ -60,11 +60,22 @@
     margin-left: 35px;
     display: flex;
     flex-direction: column;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 2.3vw;
+    font-weight: 500;
     line-height: 1.2;
     padding-right: 20px;
     text-align: left;
+    @media (max-width: 450px) {
+        margin-bottom: 10px;
+        text-align: center;
+        flex-direction: row;
+        flex-wrap: wrap; /* Добавлено: разрешаем перенос слов */
+        gap: 5px; /* Добавлено: небольшой отступ между словами */
+        justify-content: center; /* Добавлено: центрируем слова */
+        white-space: normal; /* Добавлено: сбрасываем pre-wrap если был */
+        word-break: keep-all;
+        margin-left: -3px;
+    }
 }
 
 
@@ -72,6 +83,11 @@
     max-width: 100%;
     max-height: 100%;
     border-radius: 15px;
+    @media (max-width: 450px) {
+        width: 95%;
+        height: 200px;
+        object-fit: cover;
+    }
 }
 
 .nav-arrow {
