--- a/leningrad/components/attraction-info/interesting-facts-style.css
+++ b/leningrad/components/attraction-info/interesting-facts-style.css
@@ -28,10 +28,14 @@
     text-align: left;
     white-space: pre-wrap;
     width: 100%; /* Занимает всю ширину */
+    @media (max-width: 450px) {
+        font-size: 10px;
+    }
 }
 
 .list-item {
     margin-bottom: 3.7%;
+    line-height: 1.2;
     text-align: left;
     padding-left: 1em; /* Отступ для текста относительно маркера */
     text-indent: -1em; /* Выравниваем текст с маркером */
