--- a/leningrad/components/attraction-info/time-period-section-style.css
+++ b/leningrad/components/attraction-info/time-period-section-style.css
@@ -28,7 +28,7 @@
   gap: 10px; /* Расстояние между линиями и текстом */
 }
 .routes-line {
-  width: 350px;
+  width: 23vw;
   border: 0;
   border-top: 2px solid black; /* Черная линия */
   margin: 0;
@@ -77,11 +77,14 @@
   padding-bottom: 5%;
   text-align: justify;
   white-space: pre-wrap;
-  font-size: 1.7vw;
+  font-size: 1.8vw;
   line-height: 2.1vw;
   font-weight: 500;
   margin: 0;
   width: 55vw;
+  @media (max-width: 450px) {
+    width: 95%;
+  }
 }
 
 .time-period-section-image {
