--- a/leningrad/components/attraction-info/heart-button-style.css
+++ b/leningrad/components/attraction-info/heart-button-style.css
@@ -16,6 +16,50 @@
         width: 36vw;
     }
 }
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.modal-buttons button {
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.modal-buttons button:first-child {
+    background: grey;
+    color: white;
+}
+
+.modal-buttons button:last-child {
+    background: #0B83D9;
+    color: white;
+}
+
 
 .heart-button-image {
     margin-left: 1.6vw;
