--- a/leningrad/app/attraction-info/page-style.css
+++ b/leningrad/app/attraction-info/page-style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap');
 
+html,
+body {
+    height: 100%;
+    overflow-y: auto !important;
+}
+
 .attraction-title {
     margin-top: 40px;
     margin-bottom: 40px;
