fix: bag 80% render

--- a/leningrad/app/objects/Objects.module.css
+++ b/leningrad/app/objects/Objects.module.css
@@ -19,8 +19,8 @@
 .header {
   font-family: "Geologica", sans-serif;
   font-size: 130px;
-  margin-top: 50px;
-  margin-left: 110px;
+  margin-top: 30px;
+  margin-left: 90px;
   position: relative;
   z-index: 10;
 }
@@ -36,8 +36,6 @@
   display: inline-block;
 }
 
-
-
 .svgImage {
   position: absolute;
   top: 62%;
@@ -49,12 +47,10 @@
 }
 
 
-
-
 /* Стили для карточек объектов */
 .objectsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 60px;
   margin-top: 50px;
   justify-items: center;
@@ -69,7 +65,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  max-width: 550px;
+  max-width: 400px;
  
 }
 
@@ -103,13 +99,14 @@
 }
 
 .cardContent {
-  padding: 15px;
+  padding: 3px;
+  text-align: center;
 }
 
 .cardContent h3 {
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 /* Описание (появляется при свайпе на мобильных и при наведении на ПК) */
@@ -275,7 +272,6 @@
 @media (max-width: 768px) {
   .container {
     padding: 10px;
-
   }
 
   .header {
@@ -289,9 +285,9 @@
     content: "";
     position: absolute;
     bottom: -10px;
-    left: -160px;
+    
     width: 100px;
-    height: 1px;
+    height: 10px;
     background-color: #000;
     display: inline-block;
   }
@@ -301,14 +297,14 @@
     top: 78%;
     left: 200px;
     transform: translateY(-50%);
-    width: 200px;
+    width: 170px;
     height: auto;
     z-index: 1;
   }
 
   .categories {
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 3px;
   }
 
   .categoryButton {
@@ -321,6 +317,11 @@
     width: 100%; /* Занимает всю ширину */
     max-width: 400px; /* Максимальная ширина карточки */
     margin: 30px auto;
+  }
+
+  .objectCard {
+   
+    max-width: 320px; /* Ограничиваем максимальную ширину */
   }
 
   .cardImage {
