--- a/leningrad/app/components/video-player/CustomVideoPlayer.module.css
+++ b/leningrad/app/components/video-player/CustomVideoPlayer.module.css
@@ -1,11 +1,13 @@
 .videoWrapper {
     position: relative;
     padding-top: 56.25%; /* 16:9 соотношение */
-    margin: 2rem 0;
+    margin: 0;
 }
 
 .videoWrapper > div {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
 }
