--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap');
-/*
+
 body {
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-} */
+}
 
 .text {
   font-size: clamp(30px, 2.5vh, 48px);
