--- a/leningrad/app/routes/routes.module.css
+++ b/leningrad/app/routes/routes.module.css
@@ -19,8 +19,8 @@
 .header {
   font-family: "Geologica", sans-serif;
   font-size: 130px;
-  margin-top: 30px;
-  margin-left: 90px;
+  margin-top: 50px;
+  margin-left: 110px;
   position: relative;
   z-index: 10;
 }
@@ -28,7 +28,7 @@
 .header::after {
   content: "";
   position: absolute;
-  bottom: 0px;
+  bottom: -10px;
   left: -160px;
   width: 1000px;
   height: 1px;
@@ -47,17 +47,17 @@
 
 .svgImage {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 80px;
   transform: translateY(-50%);
-  width: 580px;
+  width: 600px;
   height: auto;
   z-index: 1;
 }
 
 .categoryButton {
   padding: 10px 20px;
-  margin-top: 40px;
+  margin-top: 20px;
   border: none;
   border-radius: 50px;
   background-color: #f0f0f0;
@@ -126,14 +126,13 @@
 }
 
 .cardContent {
-  padding: 3px;
-  text-align: center;
+  padding: 15px;
 }
 
 .cardContent h3 {
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 /* Описание (появляется при свайпе на мобильных и при наведении на ПК) */
@@ -319,7 +318,7 @@
 
   .svgImage {
     position: absolute;
-    top: 80%;
+    top: 85%;
     left: 40px;
     transform: translateY(-50%);
     width: 200px;
@@ -329,14 +328,12 @@
 
   .categories {
     flex-wrap: wrap;
-    column-gap: 10px;
-    row-gap: 0px;
+    gap: 8px;
   }
 
   .categoryButton {
     padding: 8px 16px;
     font-size: 14px;
-    margin: 12px;
   }
 
   .routesGrid {
@@ -350,7 +347,7 @@
   }
 
   .cardContent h3 {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .cardInner.showDescription .cardDescription {
