--- a/leningrad/app/info-for-map/info-for-map-styles.css
+++ b/leningrad/app/info-for-map/info-for-map-styles.css
@@ -370,6 +370,16 @@
     border-radius: 2px;
     transform: translateX(-50%);
   }
+  .bottom-sheet {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: white;
+    border-radius: 50px 50px 0 0;
+    z-index: 1000;
+  }
+  
 
   /* Высота окна в развернутом виде */
   .mobile-version .mobile-info-window.expanded {
