--- a/leningrad/app/video/Videos.module.css
+++ b/leningrad/app/video/Videos.module.css
@@ -41,9 +41,18 @@
   top: 62%;
   left: 725px;
   transform: translateY(-50%);
-  width: 450px;
+  width: 350px;
   height: auto;
   z-index: 1;
+  filter: 
+    brightness(0)          /* Делаем изображение чёрным */
+    saturate(100%)         /* Насыщенность (необязательно) */
+    invert(39%)            /* Инвертируем частично */
+    sepia(56%)             /* Добавляем сепию */
+    saturate(1532%)        /* Усиливаем цвет */
+    hue-rotate(176deg)     /* Поворачиваем оттенок в синий */
+    brightness(91%)        /* Корректируем яркость */
+    contrast(101%);        /* Корректируем контраст */
 }
 
 /* Стили для карточек видео */
@@ -89,6 +98,13 @@
   margin-bottom: 5px;
 }
 
+.textUnavailability {
+  font-size: 50px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+
 /* Медиа-запросы */
 
 /* Для ПК */
@@ -112,9 +128,9 @@
   .header::after {
     content: "";
     position: absolute;
-    bottom: -10px;
-    left: -160px;
-    width: 100px;
+    bottom: -5px;
+    left: 0px;
+    width: 300px;
     height: 1px;
     background-color: #000;
     display: inline-block;
@@ -122,12 +138,21 @@
 
   .svgImage {
     position: absolute;
-    top: 78%;
+    top: 75%;
     left: 200px;
     transform: translateY(-50%);
-    width: 200px;
+    width: 120px;
     height: auto;
     z-index: 1;
+    filter: 
+      brightness(0)          /* Делаем изображение чёрным */
+      saturate(100%)         /* Насыщенность (необязательно) */
+      invert(39%)            /* Инвертируем частично */
+      sepia(56%)             /* Добавляем сепию */
+      saturate(1532%)        /* Усиливаем цвет */
+      hue-rotate(176deg)     /* Поворачиваем оттенок в синий */
+      brightness(91%)        /* Корректируем яркость */
+      contrast(101%);        /* Корректируем контраст */
   }
 
   .videosGrid {
@@ -140,5 +165,11 @@
 
   .cardContent h3 {
     font-size: 16px;
+  }
+
+  .textUnavailability {
+    font-size: 20px;
+    text-align: center;
+    margin-top: 40px;
   }
 }
