--- a/leningrad/app/components/TopBarMobile.module.css
+++ b/leningrad/app/components/TopBarMobile.module.css
@@ -132,6 +132,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center; 
+        margin-left: -20px;
     }
   
     .logoBar img {
