--- a/leningrad/app/map/page-style.css
+++ b/leningrad/app/map/page-style.css
@@ -27,7 +27,7 @@
 .slider-container {
     position: fixed;
     bottom: 15px;
-    width: 68vw;
+    width: 71.4vw;
     padding: 0.5vw;
     left: 50%;
     transform: translateX(-50%);
@@ -40,11 +40,14 @@
 }
 
 .rc-slider {
-    width: 57.12vw;
+    width: 92%;
     position: absolute;
     top: 64%;
     transform: translate(-50%, -50%);
     left: 50%;
+    @media (max-width: 450px) {
+        width: 88%;
+    }
 }
 
 .rc-slider-rail {
@@ -80,17 +83,19 @@
     font-size: 14px;
     color: #808080;
     z-index: 3;
+    @media (max-width: 450px) {
+        font-size: 10px;
+    }
 }
 
 .min-label {
-    left: 8%;
+    left: 4%;
     transform: translateX(-50%);
-    
 }
 
 
 .max-label {
-    left: 92%;
+    left: 96%;
     transform: translateX(-50%);
 }
 
@@ -99,4 +104,7 @@
     font-size: clamp(10px, 2.5vh, 14px);
     color: #0D74BD;
     z-index: 3;
+    @media (max-width: 450px) {
+        font-size: 10px;
+    }
 }
