--- a/leningrad/app/info-for-map/info-for-map-styles.css
+++ b/leningrad/app/info-for-map/info-for-map-styles.css
@@ -16,9 +16,11 @@
   position: fixed;
   top: 0;
   left: 0;
-  margin-top: 45px;
+  margin-left: 10px;
+  margin-top: 50px;
   width: 410px;
-  height: calc(100vh - 45px);
+  height: calc(91vh - 45px);
+  border-radius: 30px;
   /* Учитываем верхний отступ */
   background: white;
   box-shadow: 4px 0 10px rgba(0, 0, 0, 0.2);
